--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <a href="index.html">Inicio</a>
         <a href="tabelas.html">tabelas</a>
         <a href="form.html">Form</a>
+        <a href=""></a>
+        <a href="flash.html">Flas</a>
     </nav>
     <main>
         <hr>
