--- a/form.html
+++ b/form.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form</title>
+    <link rel="stylesheet" href="css/cabecario.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <header>
-        <h1> Formas nesta pagina</h1>
-        <nav>
-            <a href="index.html"> inicio</a>
-            <a href="tabelas.html"> tabelas</a>
-            <a href="form.html"> Form</a>
-        </nav>
+        <h1>Pagina com serviços online como musica e video</h1>
     </header>
+    <nav>
+        <a href="index.html">Inicio</a>
+        <a href="tabelas.html">Tabelas</a>
+        <a href="form.html">Form</a>
+        <a href="flash.html">Flash</a>
+        <a href="upload.html">Upload</a>
+    </nav>
     <main>
                 <!--
                     Sempre que você quiser coletar informações de visitantes que você vai precisar de um formulário, que vive dentro de um <Form> elemento.
