--- a/tabelas.html
+++ b/tabelas.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tabela htmml</title>
+    <link rel="stylesheet" href="css/cabecario.css">
 </head>
 <body>
+    <header>
+        <h1>Pagina com serviços online como musica e video</h1>
+    </header>
+    <nav>
+        <a href="index.html">Inicio</a>
+        <a href="tabelas.html">Tabelas</a>
+        <a href="form.html">Form</a>
+        <a href="flash.html">Flash</a>
+        <a href="upload.html">Upload</a>
+    </nav>
     <main>
         <table>
             <tr>
