--- a/upload.html
+++ b/upload.html
@@ -3,14 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>flash</title>
+    <title>Upload</title>
     <link rel="stylesheet" href="css/cabecario.css">
-    <script type= "text / javascript"
-        src = "http://ajax.googleapis.com/ajax/libs/ SWFObjects / 2,2 /
-        swfobject.js"> 
-    </script> 
-    <script type = "text / javascript" swfobject.embedSWF ( "flash / bird.swf","pássaro", "400", "300", "8.0.0"); >
-    </script>
 </head>
 <body>
     <header>
@@ -23,8 +17,14 @@
         <a href="flash.html">Flash</a>
         <a href="upload.html">Upload</a>
     </nav>
-    <div id = "pássaro"> 
-        <p> Uma animação de uma tomada de pássaro um chuveiro </p> 
-    </div> 
+    <main>
+        <article>
+            <h1>vamos hospedar no nosso servidor videos e audios !!!</h1>
+            <h2>aqui emos uma musica pra ouvir online </h2>
+            <audio src="midia/Yves LaRock - Rise Up.mp3" controls></audio>
+            <video src="midia/dde-introduction.mp4" controls width=400px height=400px></video>
+            <a href="imagens/pokemon.jpeg" download="poke">faça download</a>
+        </article>
+    </main>
 </body>
 </html>
