--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/cabecario.css">
     
 
 </head>
 <body>
     <header>
-        <p>Bem Vindo a o Novo Mundo !!!</p>
+        <h1>Pagina com serviços online como musica e video</h1>
     </header>
     <nav>
         <a href="index.html">Inicio</a>
-        <a href="tabelas.html">tabelas</a>
+        <a href="tabelas.html">Tabelas</a>
         <a href="form.html">Form</a>
-        <a href=""></a>
-        <a href="flash.html">Flas</a>
+        <a href="flash.html">Flash</a>
+        <a href="upload.html">Upload</a>
     </nav>
     <main>
         <hr>
@@ -79,14 +79,7 @@
 
             Criado por Ronald
         </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic suscipit incidunt dolorem nisi labore, at voluptatem molestiae atque magnam voluptas saepe, ipsum adipisci voluptate ducimus vel optio quidem, aliquam sapiente!
-        </p>
-        <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti exercitationem eligendi voluptate aliquam mollitia tempore ea soluta iusto, animi excepturi asperiores possimus enim voluptatibus sunt ipsa esse modi et cumque.
-        </p>
-
-
+    
 
     </main>
             <!--   t    "      183  -->
