--- a/exemplos-css.html
+++ b/exemplos-css.html
@@ -3,10 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/cabecario.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>Exemplos CSS</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Pagina com Exemplos em CSS</h1>
+    </header>
+    <nav>
+        <a href="index.html">Inicio</a>
+        <a href="tabelas.html">Tabelas</a>
+        <a href="form.html">Form</a>
+        <a href="flash.html">Flash</a>
+        <a href="upload.html">Upload</a>
+        <a href="exemplos-css.html">Exemplos CSS</a>
+    </nav>
+    <main>
+        <div class=principal>
+            <h1>Exemplos aplicados de CSS</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe dignissimos doloremque cumque velit est laboriosam possimus in eum! Quaerat maxime veniam officiis impedit illo doloribus earum, fugiat et assumenda neque!
+        </p>
+        </div>
+        <div class=lateral>
+
+        </div>
+    </main>
 </body>
 </html>
