--- a/flash.html
+++ b/flash.html
@@ -22,6 +22,7 @@
         <a href="form.html">Form</a>
         <a href="flash.html">Flash</a>
         <a href="upload.html">Upload</a>
+        <a href="exemplos-css.html">Exemplos CSS</a>
     </nav>
     <div id = "pássaro"> 
         <p> Uma animação de uma tomada de pássaro um chuveiro </p> 
