--- a/tabelas.html
+++ b/tabelas.html
@@ -16,6 +16,7 @@
         <a href="form.html">Form</a>
         <a href="flash.html">Flash</a>
         <a href="upload.html">Upload</a>
+        <a href="exemplos-css.html">Exemplos CSS</a>
     </nav>
     <main>
         <table>
