--- a/exemplos-css.html
+++ b/exemplos-css.html
@@ -18,8 +18,9 @@
         <a href="flash.html">Flash</a>
         <a href="upload.html">Upload</a>
         <a href="exemplos-css.html">Exemplos CSS</a>
+        <a href="pagina-de-downloads.html">Downloads</a>
     </nav>
-    <main>
+    <main class="main">
         <div class=principal>
             <h1>Exemplos aplicados de CSS</h1>
            <article class= art1>
