--- a/flash.html
+++ b/flash.html
@@ -23,6 +23,7 @@
         <a href="flash.html">Flash</a>
         <a href="upload.html">Upload</a>
         <a href="exemplos-css.html">Exemplos CSS</a>
+        <a href="pagina-de-downloads.html">Downloads</a>
     </nav>
     <div id = "pássaro"> 
         <p> Uma animação de uma tomada de pássaro um chuveiro </p> 
