--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
         <a href="flash.html">Flash</a>
         <a href="upload.html">Upload</a>
         <a href="exemplos-css.html">Exemplos CSS</a>
+        <a href="pagina-de-downloads.html">Downloads</a>
     </nav>
+
+
     <main>
         <div class="principal">
             <h1>Sinopses de livros</h1>
@@ -94,6 +97,6 @@
     </main>
 
 
-        <!--   t    "      183  -->
+        <!-- -->
 </body>
 </html>
