--- a/tabelas.html
+++ b/tabelas.html
@@ -17,6 +17,7 @@
         <a href="flash.html">Flash</a>
         <a href="upload.html">Upload</a>
         <a href="exemplos-css.html">Exemplos CSS</a>
+        <a href="pagina-de-downloads.html">Downloads</a>
     </nav>
     <main>
         <table>
