--- a/form.html
+++ b/form.html
@@ -18,6 +18,7 @@
         <a href="flash.html">Flash</a>
         <a href="upload.html">Upload</a>
         <a href="exemplos-css.html">Exemplos CSS</a>
+        <a href="pagina-de-downloads.html">Downloads</a>
     </nav>
     <main>
         <div class=principal>
